<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory app:title="@string/Theme">

        <SwitchPreferenceCompat
            app:key="dark_theme"
            app:title="@string/dark_theme" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/data_settings">

        <ListPreference
            app:defaultValue="4"
            app:entries="@array/time_interval_data"
            app:entryValues="@array/time_interval_data_values"
            app:key="interval_get_data"
            app:title="@string/interval_get_data_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/notifications_header">

        <SwitchPreferenceCompat
            app:key="notification_enabled"
            app:title="@string/notifications_title" />

    </PreferenceCategory>

</PreferenceScreen>